--- a/app/src/main/res/drawable/input_field_invalid.xml
+++ b/app/src/main/res/drawable/input_field_invalid.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/accent"/>
+    <solid android:color="@color/accentDark"/>
     <corners android:radius="5dp"/>
-    <stroke android:color="@color/redStroke" android:width="3dp" />
+    <stroke android:color="@color/invalidStroke" android:width="1dp" />
 </shape>
