--- a/app/src/main/res/layout/announcement_activity.xml
+++ b/app/src/main/res/layout/announcement_activity.xml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/background"
+
     tools:context=".contactActivities.AnnouncementActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/accent"
+        app:title="@string/APSTitle"
+        android:id="@+id/toolbar">
+    </android.support.v7.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/APSContentView"
             android:orientation="vertical">
 
             <!-- Title Label & Field Container -->
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <!-- Title Label -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/APSTitle"
-                    android:textSize="21sp"
-                    android:textColor="@color/whiteText"
+                    android:text="@string/APSTitleLabel"
+                    android:textSize="17sp"
+                    android:textColor="@color/accent"
                     android:id="@+id/APSTitleLabel" />
 
                 <!-- Title Field -->
@@ -41,26 +58,21 @@
                     style="@style/EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_toRightOf="@id/APSTitleLabel"
-                    android:layout_toEndOf="@id/APSTitleLabel"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:hint="@string/APSRequiredHint"
                     android:maxLines="1"
                     android:id="@+id/APSTitleField"/>
-            </RelativeLayout>
+            </LinearLayout>
 
             <!-- Description Label -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/APSDescription"
-                android:textSize="21sp"
-                android:textColor="@color/whiteText"
+                android:layout_marginTop="8dp"
+                android:text="@string/APSDescriptionLabel"
+                android:textSize="17sp"
+                android:textColor="@color/accent"
                 android:id="@+id/APSDescriptionLabel"/>
 
             <!-- Description Field -->
@@ -93,15 +105,15 @@
 
                 <!-- Date Button -->
                 <Button
+                    style="@style/LyonsButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:background="@color/accent"
-                    android:textColor="@color/whiteText"
                     android:onClick="pickDate"
-                    android:text="@string/APSDateButtonText"/>
+                    android:text="@string/APSDateButtonText"
+                    android:id="@+id/APSDateButton"/>
             </LinearLayout>
 
             <!-- Time Button & Field Container -->
@@ -122,33 +134,31 @@
 
                 <!-- Time Button -->
                 <Button
+                    style="@style/LyonsButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:background="@color/accent"
-                    android:textColor="@color/whiteText"
                     android:onClick="pickTime"
-                    android:text="@string/APSTimeButtonText"/>
+                    android:text="@string/APSTimeButtonText"
+                    android:id="@+id/APSTimeButton"/>
             </LinearLayout>
 
             <!-- Location Label & Field Container -->
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginTop="8dp">
 
                 <!-- Location Label -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/APSLocation"
-                    android:textSize="21sp"
-                    android:textColor="@color/whiteText"
+                    android:text="@string/APSLocationLabel"
+                    android:textSize="17sp"
+                    android:textColor="@color/accent"
                     android:id="@+id/APSLocationLabel" />
 
                 <!-- Location Field -->
@@ -156,26 +166,21 @@
                     style="@style/EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_toRightOf="@id/APSLocationLabel"
-                    android:layout_toEndOf="@id/APSLocationLabel"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:hint="@string/APSOptionalHint"
                     android:maxLines="1"
                     android:id="@+id/APSLocationField"/>
-            </RelativeLayout>
+            </LinearLayout>
 
             <!-- Teacher Label -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/APSTeacher"
-                android:textSize="21sp"
-                android:textColor="@color/whiteText"
+                android:text="@string/APSTeacherLabel"
+                android:textSize="17sp"
+                android:textColor="@color/accent"
                 android:id="@+id/APSTeacherLabel"/>
 
             <!-- Teacher Field -->
@@ -188,16 +193,54 @@
                 android:inputType="textPassword"
                 android:id="@+id/APSTeacherLogin"/>
 
-            <!-- Submission Button -->
-            <Button
-                android:layout_width="wrap_content"
+            <!-- Submit & Approve Buttons -->
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@color/accent"
-                android:textColor="@color/whiteText"
-                android:onClick="submitAnnouncement"
-                android:text="@string/APSSubmitButtonText"
-                android:id="@+id/APSApproveButton"/>
+                android:layout_marginTop="8dp">
+
+                <!-- Approval/Unlock Button -->
+                <Button
+                    style="@style/LyonsButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:onClick="approveProposal"
+                    android:text="@string/APSApproveButtonText"
+                    android:id="@+id/APSApproveButton"/>
+
+                <!-- Submit Button -->
+                <Button
+                    style="@style/LyonsButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:onClick="submitAnnouncement"
+                    android:text="@string/APSSubmitButtonText"
+                    android:visibility="gone"
+                    android:id="@+id/APSSubmitButton"/>
+            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+
+    <!--<ProgressBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:visibility="gone"-->
+        <!--android:indeterminate="true"-->
+        <!--android:indeterminateDrawable="@drawable/loading_circle"-->
+        <!--android:id="@+id/APSLoadingWheel" />-->
+
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@id/APSLoadingWheel"-->
+        <!--android:visibility="gone"-->
+        <!--android:textSize="17sp"-->
+        <!--android:textColor="@color/accent"-->
+        <!--android:maxLines="3"-->
+        <!--android:id="@+id/APSLoadingLabel" />-->
 </RelativeLayout>
