--- a/app/src/main/res/layout/calendar_activity.xml
+++ b/app/src/main/res/layout/calendar_activity.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/CalDLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,10 +15,26 @@
         android:background="@color/background"
         tools:context="com.wlmac.lyonsden2_android.CalendarActivity">
 
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextColor="@color/accent"
+            app:title="@string/CalSTitle"
+            android:id="@+id/toolbar">
+        </android.support.v7.widget.Toolbar>
+
         <!-- Calendar Place Holder -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
             android:id="@+id/CalSCalendar"/>
 
         <!-- Date Label -->
@@ -52,6 +69,23 @@
                 android:dividerPadding="6dp"
                 android:id="@+id/CalSEventList"/>
         </ScrollView>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/loading_circle"
+            android:id="@+id/CalSLoadingWheel" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/CalSLoadingWheel"
+            android:textSize="17sp"
+            android:textColor="@color/accent"
+            android:maxLines="3"
+            android:id="@+id/CalSLoadingLabel" />
 
     </RelativeLayout>
 
