--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -9,19 +9,35 @@
     <!-- Contact screen -->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/background"
         tools:context=".ContactActivity">
 
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextColor="@color/accent"
+            app:title="@string/ConSTitle"
+            android:id="@+id/toolbar">
+        </android.support.v7.widget.Toolbar>
+
         <!-- "Get in touch with Mac" Label -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
             android:text="@string/CSGetInTouchWithMac"
             android:id="@+id/CSTextView"
             android:layout_marginTop="11dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:textColor="@color/accent"
             android:textSize="23sp" />
