--- a/app/src/main/res/layout/default_list_cell.xml
+++ b/app/src/main/res/layout/default_list_cell.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/defaultCellSize"
-    android:background="@color/listCellBackground"
+    android:background="@color/listViewBackground"
     android:layout_gravity="start"
     android:orientation="horizontal"
     android:paddingLeft="4dp"
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/blackText"
             android:textSize="@dimen/LITitleTextSize"
             android:id="@+id/LIDTitleLabel"/>
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:lines="1"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/blackText"
             android:textSize="@dimen/LISubtitleTextSize"
             android:id="@+id/LIDInfoLabel"/>
     </LinearLayout>
@@ -49,7 +49,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginStart="4dp"
         android:layout_gravity="right|end"
-        android:background="@color/deleteRed"
+        android:background="@color/invalidStroke"
         android:text="@string/deleteButton"
         android:visibility="gone"
         android:id="@+id/LIDDeleteButton"/>
