--- a/app/src/main/res/layout/home_activity_content.xml
+++ b/app/src/main/res/layout/home_activity_content.xml
@@ -1,51 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/HDLayout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!--<android.support.design.widget.CoordinatorLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<android.support.design.widget.AppBarLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:minHeight="?attr/actionBarSize"-->
-            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
-            <!--android:fitsSystemWindows="true"-->
-            <!--android:id="@+id/appBar">-->
-
-            <!--<android.support.v7.widget.Toolbar-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="?attr/actionBarSize"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_alignParentStart="true"-->
-                <!--android:layout_alignParentEnd="true"-->
-                <!--android:background="?attr/colorPrimary"-->
-                <!--android:minHeight="?attr/actionBarSize"-->
-                <!--app:titleTextColor="@color/navigationBarText"-->
-                <!--app:title="@string/HSTitle"-->
-                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-                <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"-->
-                <!--android:id="@+id/toolbar">-->
-            <!--</android.support.v7.widget.Toolbar>-->
-        <!--</android.support.design.widget.AppBarLayout>-->
-
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-            <!--android:id="@+id/recyclerView">-->
-
-        <!--</android.support.v7.widget.RecyclerView>-->
-
-    <!--</android.support.design.widget.CoordinatorLayout>-->
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical">
 
     <!-- Top Views Container -->
     <RelativeLayout
@@ -54,28 +12,10 @@
         android:id = "@+id/topViews"
         android:background="@color/background">
 
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:titleTextColor="@color/accent"
-            app:title="@string/HSTitle"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
-            android:id="@+id/toolbar">
-        </android.support.v7.widget.Toolbar>
-
         <!-- Today Is Day -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
             android:text="@string/HSTodayIsDay"
             android:id="@+id/HSTodayIsDay"
             android:textSize="24sp"
@@ -249,25 +189,18 @@
                     android:layout_marginBottom="5dp" />
             </LinearLayout>
         </LinearLayout>
-
-        <!-- Announcements Container -->
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/HSDayLabel"
-            android:id="@+id/HSList"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/background"
-            android:divider="@color/listDivider"
-            android:dividerHeight="1dp"
-            android:overScrollFooter="@color/background"
-            android:overScrollHeader="@color/background"
-            android:layout_marginTop="1dp" />
     </RelativeLayout>
 
-    <!-- Navigation drawer -->
+    <!-- Announcements Container -->
     <ListView
-        style="@style/DrawerListStyle"
-        android:id="@+id/HDList"/>
-
-</android.support.v4.widget.DrawerLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/HSList"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/background"
+        android:divider="@color/listDivider"
+        android:dividerHeight="1dp"
+        android:overScrollFooter="@color/background"
+        android:overScrollHeader="@color/background"
+        android:layout_marginTop="1dp" />
+</LinearLayout>
