--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/background"
     android:id="@+id/ISContentView"
     tools:context="com.wlmac.lyonsden2_android.resourceActivities.InfoActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/accent"
+        android:id="@+id/toolbar">
+    </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="0dp"
         android:orientation="horizontal"
         android:clipChildren="true"
         android:id="@+id/ISTopSection">
@@ -22,7 +36,6 @@
             android:layout_width="@dimen/ISImageViewWidth"
             android:layout_height="@dimen/ISImageViewHeight"
             android:layout_weight="0.75"
-            android:contentDescription="@string/ISImageContentDescription"
             android:id="@+id/ISImageView"/>
 
         <TextView
@@ -32,7 +45,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:gravity="start"
-            android:text="@string/ISTitleDefault"
             android:textColor="@color/accent"
             android:textSize="@dimen/ISTitleTextSize"
             android:id="@+id/ISTitleLabel"/>
@@ -43,11 +55,12 @@
         android:layout_height="@dimen/ISDescriptionHeight"
         android:layout_below="@id/ISTopSection"
         android:layout_marginTop="8dp"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="0dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="@string/ISDescriptionDefault"
         android:textColor="@color/accent"
         android:textSize="@dimen/ISTextSize"
         android:id="@+id/ISDescriptionLabel"/>
@@ -61,6 +74,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
@@ -68,7 +82,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/ISTimeDefault"
             android:textColor="@color/accent"
             android:textSize="@dimen/ISTextSize"
             android:id="@+id/ISDateLabel"/>
@@ -80,7 +93,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:gravity="right|end"
-            android:text="@string/ISLocationDefault"
             android:textColor="@color/accent"
             android:textSize="@dimen/ISTextSize"
             android:id="@+id/ISLocationLabel"/>
