--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LDLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,10 +15,42 @@
         tools:context="com.wlmac.lyonsden2_android.ListActivity"
         android:background="@color/background">
 
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextColor="@color/accent"
+            app:title="@string/LSTitleEvents"
+            android:id="@+id/toolbar">
+        </android.support.v7.widget.Toolbar>
+
+        <ExpandableListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:groupIndicator="@null"
+            android:background="@color/background"
+            android:childDivider="@android:color/transparent"
+            android:divider="@color/listDivider"
+            android:dividerHeight="1dp"
+            android:id="@+id/LSEventsList"/>
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/toolbar"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -27,7 +60,24 @@
             android:background="@color/background"
             android:divider="@color/listDivider"
             android:dividerHeight="1dp"
-            android:id="@+id/LSClubsEventsList" />
+            android:id="@+id/LSClubsList" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/loading_circle"
+            android:id="@+id/LSLoadingWheel" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/LSLoadingWheel"
+            android:textSize="17sp"
+            android:textColor="@color/accent"
+            android:maxLines="3"
+            android:id="@+id/LSLoadingLabel" />
     </RelativeLayout>
 
     <!-- Navigation drawer -->
