--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/background"
     tools:context="com.wlmac.lyonsden2_android.LoginActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@color/accent"
+        app:title="@string/HSTitle"
+        android:id="@+id/toolbar">
+    </android.support.v7.widget.Toolbar>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="@dimen/LSLogoImageHeight"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/toolbar"
         android:src="@drawable/den_logo"
         android:id="@+id/LSLogoImage"/>
 
@@ -84,7 +96,6 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/textFieldBackground"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/LSEmailField"
@@ -95,7 +106,6 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/textFieldBackground"
             android:inputType="textPassword"
             android:ems="10"
             android:maxLines="1"
@@ -107,7 +117,6 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/textFieldBackground"
             android:inputType="text"
             android:ems="10"
             android:maxLines="1"
