--- a/app/src/main/res/layout/music_activity.xml
+++ b/app/src/main/res/layout/music_activity.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/foregroundColor"
+    android:background="@color/background"
     tools:context="com.wlmac.lyonsden2_android.contactActivities.MusicActivity">
 
 </RelativeLayout>
