--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="navigationBarColor">#F1C40F</color>
-    <color name="navigationBarDarkColor">#064CA1</color>
-    <color name="redStroke">#7fff002f</color>
-    <color name="foregroundColor">#ECF0F1</color>
-    <color name="backgroundColor">#022a64</color>
-    <color name="skyBlueColor">#a3bee5</color>
-    <color name="accentColor">#fec637</color>
-    <color name="CalSEventCellColor">#7fa3bee5</color>
-    <color name="CalSDefaultCellColor">#7f022a64</color>
-    <color name="deleteRed">#ac0028</color>
-
-    <!-- New Color Scheme -->
     <color name="background">#ECF0F1</color>
-    <color name="textFieldBackground">#2980B9</color>
-    <color name="whiteText">#FFFFFF</color>
     <color name="navigationBar">#F1C40F</color>
-    <color name="navigationBarText">#95A5A6</color>
+    <color name="navigationText">#95A5A6</color>
     <color name="accent">#3646A0</color>
+    <color name="timeTableBackground">#064CB2</color>
+    <color name="accentDark">#022A64</color>
+    <color name="whiteText">#FFFFFF</color>
+    <color name="blackText">#000000</color>
+    <color name="invalidStroke">#FF0030</color>
+    <color name="listViewBackground">#EDF7FF</color>
     <color name="listDivider">#607D8B</color>
-    <color name="calendarCellBackground">#3498DB</color>
-    <color name="listCellBackground">#3F51B5</color>
-    <color name="timetableDividers">#43555E</color>
 
-    <color name="eventViewBackground">#022A64</color>
+
     <color name="cellDefault">#80022a64</color>
     <color name="cellTodayBorder">#3498DB</color>
     <color name="cellEvent">#d9022a64</color>
 
+    <color name="loadingIndicatorGradient">#3b3646a0</color>
+
     <color name="courseViewBackground">#e5ecf0f1</color>
 
     <color name="segmentedButtonUnselected">#a3a3a3</color>
+
+    <color name="loadingBlanketColor">#e6ecf0f1</color>
 </resources>
 
 <!-- New Color Scheme
